# arbitrage_bot

./: .env.example  .gitignore  .pre-commit-config.yaml  ARCHITECTURE.md  ASSUMPTIONS.md  BACKTESTING.md  COMMISSIONING_PLAN.md  Dockerfile  LIVE_READINESS_CHECKLIST.md  Makefile  PROMOTION_GATES.md  README.md  RISK_GUARDS.md  RUNBOOK.md  TESTING.md  alembic.ini  docker-compose.yml  pyproject.toml
alembic/: env.py
alembic/versions/: 0001_initial.py  0002_failure_fields.py  0003_observation_backtest_runtime.py  0004_canonical_status_normalization.py
app/: app_state.py  main.py
app/alerts/: service.py
app/api/: router.py  schemas.py
app/backtest/: __init__.py  engine.py
app/commissioning/: __init__.py  reporting.py  service.py
app/config/: __init__.py  settings.py
app/contracts/: client.py
app/dashboard/: router.py
app/db/: __init__.py  init_db.py  repository.py  session.py
app/exchanges/: errors.py  factory.py
app/execution/: interface.py  live.py  paper.py
app/health/: __init__.py  collector.py  types.py
app/jobs/: runner.py
app/models/: __init__.py  core.py
app/quote_engine/: edge.py  engine.py  types.py
app/readiness/: service.py
app/risk/: guards.py  manager.py
app/strategy/: base.py  base_virtual_shadow.py  hyperevm_live.py
app/utils/: confidence.py  decimal_math.py  ids.py  logging.py  metrics.py  replay.py
contracts/: ArbExecutor.sol
contracts/test/: MockERC20.sol  MockRouter.sol
tests/contract/: test_arb_executor.py
tests/integration/: test_api_dashboard.py  test_commissioning_cli.py
tests/unit/: test_adapter_selection.py  test_backtest_engine.py  test_blocked_reason_summary.py  test_cex_real_adapters.py  test_commissioning_reporting.py  test_commissioning_service.py  test_confidence_models.py  test_config_validation.py  test_edge_calculation.py  test_failure_semantics.py  (+13 more)
(+11 files in other folders)
